--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  padding-bottom: 20px;
 }
 
 .App-logo {
@@ -28,6 +29,18 @@
   color: #61dafb;
 }
 
+.card{
+width: 500px;
+height: 120px;
+border: 2px solid black;
+border-radius: 15px;
+margin: 10px;
+}
+
+div{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
